--- a/h2hweb/index.html
+++ b/h2hweb/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/cube.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>H2HWeb</title>
+    <title>H2HCube</title>
   </head>
   <body>
     <div id="root"></div>
