added lazy loading, web description

--- a/h2hweb/index.html
+++ b/h2hweb/index.html
@@ -5,6 +5,19 @@
     <link rel="icon" type="image/png" href="/cube.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>H2HCube</title>
+    <!-- Metadata for SEO and social sharing -->
+    <meta name="description" content="H2HCube: Compete, with friends in real-time head-to-head speedcubing matches." />
+    <meta name="keywords" content="Rubik's Cube, speedcubing, competition, matches, friends, real-time, H2HCube" />
+    <meta name="author" content="John Shidemantle" />
+    <meta property="og:title" content="H2HCube" />
+    <meta property="og:description" content="Compete, track, and connect with friends in real-time Rubik's Cube matches." />
+    <meta property="og:image" content="/cube.png" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://h2hweb.vercel.app/" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="H2HCube" />
+    <meta name="twitter:description" content="Compete, with friends in real-time head-to-head speedcubing matches." />
+    <meta name="twitter:image" content="/cube.png" />
   </head>
   <body>
     <div id="root"></div>
