add sitemap, modify url meta property

--- a/h2hweb/index.html
+++ b/h2hweb/index.html
@@ -13,7 +13,7 @@
     <meta property="og:description" content="Compete, track, and connect with friends in real-time Rubik's Cube matches." />
     <meta property="og:image" content="/cube.png" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://h2hweb.vercel.app/" />
+    <meta property="og:url" content="https://h2hcube.com/" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="H2HCube" />
     <meta name="twitter:description" content="Compete, with friends in real-time head-to-head speedcubing matches." />
